--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,18 +7,14 @@
         {{subject}}
     </title>
 </head>
-<body>
+<body data-theme="dark">
     <div class="container mt-2">
         <header>
            <nav>bruh</nav>
         </header>
         <section>
-            <a href="bruh">bruh</a>
+            <a href="bruh">to /bruh/</a>
         </section>
-        <footer>
-            
-          <p>footer</p>
-        </footer>
     </div>
 </body>
 </html>
