--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html data-theme="dark">
 <head>
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css">
@@ -9,12 +9,22 @@
 </head>
 <body data-theme="dark">
     <div class="container mt-2">
-        <header>
-           <nav>bruh</nav>
-        </header>
-        <section>
-            <a href="bruh">to /bruh/</a>
-        </section>
+        <nav>
+            <ul>
+                <li><a href="./" class="contrast" onclick="event.preventDefault()"><strong>Bruh</strong></a></li>
+            </ul>
+             <ul>
+                <li>
+                    bozo
+                </li>
+                <li>
+                    <a href="/bruh/">login</a>
+                </li>
+            </ul>
+        </nav>
+        <main>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero doloribus ipsa doloremque illum natus in saepe omnis facere ad illo, quidem laboriosam numquam sapiente. Aliquam pariatur sint aspernatur quidem itaque.
+        </main>
     </div>
 </body>
 </html>
