idk what but for the best

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -15,7 +15,7 @@
             </ul>
              <ul>
                 <li>
-                    bozo
+                    <a href="">dashboard</a>
                 </li>
                 <li>
                     <a href="/bruh/">login</a>
